--- a/spring-camel-integration/pom.xml
+++ b/spring-camel-integration/pom.xml
@@ -76,6 +76,10 @@
       <artifactId>camel-stream-starter</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-bindy</artifactId>
+    </dependency>
     
     <dependency>
       <groupId>org.apache.camel.springboot</groupId>
