--- a/payment-register/pom.xml
+++ b/payment-register/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.apache.camel.learn</groupId>
-  <artifactId>first-camel-integration</artifactId>
+  <artifactId>payment-register</artifactId>
   <packaging>jar</packaging>
   <version>1.0.0-SNAPSHOT</version>
 
