--- a/payment-register/pom.xml
+++ b/payment-register/pom.xml
@@ -52,7 +52,12 @@
       <artifactId>camel-bindy</artifactId>
     </dependency>
 
-
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.26</version>
+      <scope>provided</scope>
+    </dependency>
 
     <!-- logging -->
     <dependency>
@@ -110,5 +115,4 @@
 
     </plugins>
   </build>
-
 </project>
