--- a/payment-register/pom.xml
+++ b/payment-register/pom.xml
@@ -46,6 +46,10 @@
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-ftp</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-stream</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.apache.camel</groupId>
