--- a/payment-register/pom.xml
+++ b/payment-register/pom.xml
@@ -63,6 +63,24 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+      <version>2.7.4</version>
+    </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>1.4.200</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter</artifactId>
+      <version>2.7.4</version>
+    </dependency>
+
+
     <!-- logging -->
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
